# projectsentinel

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  E2E_TEST_FAILURES.txt  LICENSE  Procfile  README.md  commitlint.config.js  docker-compose.yml  index.html  package-lock.json  phases.md  requirements.txt  vercel.json
.github/: dependabot.yml  (+1 more)
worker/: .coverage  .dockerignore  .env.example  config.py  conftest.py  coverage.lcov  loop_runner.py  main.py  openapi.json  pyproject.toml  requirements.txt
worker/api/: health.py  trigger.py
worker/archiver/: __init__.py  old_post_archiver.py
worker/cache/: keys.py  shared_cache.py
worker/database/: client.py
worker/fetcher/: deduplicator.py  factcheck_fetcher.py  gnews_fetcher.py  newsapi_fetcher.py  rss_fetcher.py  url_tools.py
worker/logger/: pipeline_logger.py
worker/persistence/: groq_usage.py
worker/publisher/: supabase_publisher.py
worker/rate_limiter/: limiter.py
worker/scheduler/: jobs.py
worker/scripts/: export_openapi.py
worker/sources/: blocked_domains.py  category_map.py  rss_sources.py
worker/tests/: test_cross_source_checker.py  test_deduplicator.py  test_factcheck_matcher.py  test_fetcher_key_rotation.py  test_groq_verifier.py  test_groq_writer.py  test_integration.py  test_jobs_pipeline.py  test_post_builder.py  test_rate_limiter.py  test_rss_fetcher.py  test_score_evaluator.py  test_session_cleanup.py  test_shared_cache.py  test_stress.py  test_supabase_publisher.py
worker/utils/: groq_pool.py  key_pool.py
worker/verifier/: cross_source_checker.py  factcheck_matcher.py  gemini_verifier.py  groq_verifier.py  score_evaluator.py
(+246 files in other folders)
