[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "india-verified-worker"
version = "1.0.0"
description = "AI-powered news verification and publishing pipeline"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=term-missing --cov-report=lcov --cov-config=pyproject.toml -m 'not integration'"
markers = ["integration: tests that require real Supabase credentials"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "conftest.py"]

[tool.coverage.report]
exclude_also = [
    "def repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if False:",
]
